@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class BaseLiquid {
#m_name: string
#m_density: double
--
..properties..
    +getName(): string
    +setName(name: string)
    +getDensity(): double
    +setDensity(density: double)
..display..
    +string to_string();
    +operator <<(os: ostream&, liquid: BaseLiquid*): ostream&
    +operator >>(is: istream&, liquid: BaseLiquid*): istream&
    +virtual toStream(ostream& os)
    +virtual setFromStream(istream & is)
}

class AlcoholDrink {
    -m_strength: double
    -m_type: AlcoholDrink::Type

--
..properties..
    +getType(): AlcoholDrink::Type
    +setType(type: AlcoholDrink::Type)
    +getStrength()：double
    +setStrength(strength: double)

..display..
    toStream(os: ostream&)
    setFromStream(is: istream&)

..
    -getTypeStr(): char*
}

enum AlcoholDrink::Type {
    Beer
    Vodka
    Wine
    Whiskey
    Martini
    Cider
}

class FizzyDrink {
    -m_type: FizzyDrink::Type
    -m_sugarConcentration: double
--
..properties..
    +getType(): FizzyDrink::Type
    +setType(type: FizzyDrink::Type)
    +getSugarConcentration(): double
    +setSugarConcentration(sugarConcentration: double)

..display..
    +toStream(os: ostream&)
    +setFromStream(is: istream&)

..
    -const char* getTypeStr()
}

enum FizzyDrink::Type {
    Cola
    Lemonade
    Tarragon
}

class Petrol  {
    -m_octaveRating: unsigned int
--
..properties..
    +getOctaveRating(): unsigned int
    +setOctaveRating(rating: unsigned int)

..display..
    +toStream(os; ostream&)
    +setFromStream(is: istream&)
}

AlcoholDrink +-.- AlcoholDrink::Type
FizzyDrink +-.- FizzyDrink::Type

BaseLiquid <|-- AlcoholDrink
BaseLiquid <|-- FizzyDrink
BaseLiquid <|-- Petrol


@enduml